tests/snapshots/snapshot_tests__array_split_18.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_split_18.vmt",
    status: Panic,
    used_instantiations: [],
}
