tests/snapshots/snapshot_tests__array_split_20.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_split_20.vmt",
    status: Panic,
    used_instantiations: [],
}
